--- a/index.css
+++ b/index.css
@@ -84,9 +84,8 @@ input[type ="checkbox" i]{
 	border: none;
 	border-radius: 5px;
 	font-size: 15px;
+	font-weight: bold;
 	color: #fff;
-
-
 }
 
 .login-prompt{
